# resource_monitor

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  CpuWidget.qml  DiskWidget.qml  MemoryWidget.qml  ProcessWidget.qml  cpustatistics.cpp  cpustatistics.h  cpustatisticscollector.cpp  cpustatisticscollector.h  diskstatistics.cpp  diskstatistics.h  diskstatisticscollector.cpp  diskstatisticscollector.h  istatisticscollector.h  main.cpp  main.qml  memorystatistics.cpp  memorystatistics.h  memorystatisticscollector.cpp  memorystatisticscollector.h  processstatistics.cpp  processstatistics.h  processstatisticscollector.cpp  processstatisticscollector.h  resourcemonitor.cpp  resourcemonitor.h  statistics.h  statisticsbase.cpp  statisticsbase.h  statisticsreader.cpp  statisticsreader.h
src/MyTaskQml/: Common.js  CpuBar.qml  CpuView.qml  DiskView.qml  DisksView.qml  MemoryBar.qml  MemoryView.qml  ProcessView.qml
